# opengl-cs-rasterizer

./: .gitignore  CMakeLists.txt  README.md
scenes/: multi-spheres.json
src/: defines.hpp.in  main.cpp
src/camera/: camera.cpp  camera.hpp
src/glh/: program.cpp  program.hpp  resource.cpp  resource.hpp
src/rasterizer/: rasterizer.cpp  rasterizer.hpp  utils.cpp  utils.hpp
src/renderer/: basic.cpp  basic.hpp  octree_hiz.cpp  octree_hiz.hpp  renderer.cpp  renderer.hpp  simple_hiz.cpp  simple_hiz.hpp
src/scene/: bbox.cpp  bbox.hpp  model.cpp  model.hpp  scene.cpp  scene.hpp
src/shaders/: hiz_gen.comp
src/shaders/octree_hiz/: bbox_test.comp  calc_args.comp  init_buffer.comp  node_test.comp
src/shaders/rasterizer/: basic_z.comp  clear.comp  line_tile_draw.comp  line_tile_pre.comp  scanline.comp
src/shaders/simple_hiz/: cull.comp  fill_inst_id_map.comp
src/window/: window.cpp  window.hpp
